; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_pm.c_gen6_set_rps.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_pm.c_gen6_set_rps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.drm_i915_private* }
%struct.drm_i915_private = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64, i64, i32 }

@GEN6_RPNSWREQ = common dso_local global i32 0, align 4
@GEN6_AGGRESSIVE_TURBO = common dso_local global i32 0, align 4
@GEN6_RP_INTERRUPT_LIMITS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gen6_set_rps(%struct.drm_device* %0, i64 %1) #0 {
  %3 = alloca %struct.drm_device*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.drm_i915_private*, align 8
  %6 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.drm_device*, %struct.drm_device** %3, align 8
  %8 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %7, i32 0, i32 0
  %9 = load %struct.drm_i915_private*, %struct.drm_i915_private** %8, align 8
  store %struct.drm_i915_private* %9, %struct.drm_i915_private** %5, align 8
  %10 = load %struct.drm_i915_private*, %struct.drm_i915_private** %5, align 8
  %11 = call i32 @gen6_rps_limits(%struct.drm_i915_private* %10, i64* %4)
  store i32 %11, i32* %6, align 4
  %12 = load %struct.drm_i915_private*, %struct.drm_i915_private** %5, align 8
  %13 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 3
  %15 = call i32 @mutex_is_locked(i32* %14)
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  %18 = zext i1 %17 to i32
  %19 = call i32 @WARN_ON(i32 %18)
  %20 = load i64, i64* %4, align 8
  %21 = load %struct.drm_i915_private*, %struct.drm_i915_private** %5, align 8
  %22 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = icmp sgt i64 %20, %24
  %26 = zext i1 %25 to i32
  %27 = call i32 @WARN_ON(i32 %26)
  %28 = load i64, i64* %4, align 8
  %29 = load %struct.drm_i915_private*, %struct.drm_i915_private** %5, align 8
  %30 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = icmp slt i64 %28, %32
  %34 = zext i1 %33 to i32
  %35 = call i32 @WARN_ON(i32 %34)
  %36 = load i64, i64* %4, align 8
  %37 = load %struct.drm_i915_private*, %struct.drm_i915_private** %5, align 8
  %38 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %37, i32 0, i32 0
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 2
  %40 = load i64, i64* %39, align 8
  %41 = icmp eq i64 %36, %40
  br i1 %41, label %42, label %43

42:                                               ; preds = %2
  br label %64

43:                                               ; preds = %2
  %44 = load i32, i32* @GEN6_RPNSWREQ, align 4
  %45 = load i64, i64* %4, align 8
  %46 = call i32 @GEN6_FREQUENCY(i64 %45)
  %47 = call i32 @GEN6_OFFSET(i32 0)
  %48 = or i32 %46, %47
  %49 = load i32, i32* @GEN6_AGGRESSIVE_TURBO, align 4
  %50 = or i32 %48, %49
  %51 = call i32 @I915_WRITE(i32 %44, i32 %50)
  %52 = load i32, i32* @GEN6_RP_INTERRUPT_LIMITS, align 4
  %53 = load i32, i32* %6, align 4
  %54 = call i32 @I915_WRITE(i32 %52, i32 %53)
  %55 = load i32, i32* @GEN6_RPNSWREQ, align 4
  %56 = call i32 @POSTING_READ(i32 %55)
  %57 = load i64, i64* %4, align 8
  %58 = load %struct.drm_i915_private*, %struct.drm_i915_private** %5, align 8
  %59 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %58, i32 0, i32 0
  %60 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %59, i32 0, i32 2
  store i64 %57, i64* %60, align 8
  %61 = load i64, i64* %4, align 8
  %62 = mul nsw i64 %61, 50
  %63 = call i32 @trace_intel_gpu_freq_change(i64 %62)
  br label %64

64:                                               ; preds = %43, %42
  ret void
}

declare dso_local i32 @gen6_rps_limits(%struct.drm_i915_private*, i64*) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @mutex_is_locked(i32*) #1

declare dso_local i32 @I915_WRITE(i32, i32) #1

declare dso_local i32 @GEN6_FREQUENCY(i64) #1

declare dso_local i32 @GEN6_OFFSET(i32) #1

declare dso_local i32 @POSTING_READ(i32) #1

declare dso_local i32 @trace_intel_gpu_freq_change(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
